--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.15.3",
     "koa-compose": "^4.1.0",
     "koa-mount": "^4.0.0",
-    "koa-send": "^5.0.1"
+    "koa-send": "^5.0.1",
+    "koa-sse-stream": "^0.2.0"
   }
 }
