--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "NODE_ENV=production node -r dotenv/config lib",
-    "dev": "nodemon -e js,env -r dotenv/config lib"
+    "dev": "nodemon -e js,env -r dotenv/config lib",
+    "compile": "sass lib/public/css/style.scss:lib/public/css/style.css"
   },
   "author": "Rune Aspvik <aspvik@gmail.com>",
   "license": "ISC",
